--- a/src/main/resources/assets/minegate/lang/fr_fr.json
+++ b/src/main/resources/assets/minegate/lang/fr_fr.json
@@ -21,6 +21,7 @@
     "options.minegate.useMixins.tooltip.six": "§7il est conseillé de la laisser activé.",
     "modmenu.descriptionTranslation.minegate-moreblocks": "Ajoute de nombreux blocs et de nouvelles variantes.",
     "container.woodcutter": "Tailleur de bois",
+    "item.minegate.christmas_hat": "Bonnet de Noël",
     "block.minegate.woodcutter": "Tailleur de bois",
     "block.minegate.tile_ore": "Minerai de tuile",
     "block.minegate.obsidian_ore": "Minerai d'obsidienne",
