--- a/src/main/resources/assets/minegate/lang/en_us.json
+++ b/src/main/resources/assets/minegate/lang/en_us.json
@@ -20,6 +20,7 @@
   "options.minegate.useMixins.tooltip.five": "§7MineGate if the option is disabled,",
   "options.minegate.useMixins.tooltip.six": "§7it is recommended activate the option.",
   "container.woodcutter": "Woodcutter",
+  "item.minegate.christmas_hat": "Christmas hat",
   "block.minegate.woodcutter": "Woodcutter",
   "block.minegate.tile_ore": "Tile Ore",
   "block.minegate.deepslate_tile_ore": "Deepslate Tile Ore",
