--- a/src/main/resources/assets/minegate/lang/en_us.json
+++ b/src/main/resources/assets/minegate/lang/en_us.json
@@ -19,8 +19,9 @@
   "options.minegate.useMixins.tooltip.four": "§7and disables some features of",
   "options.minegate.useMixins.tooltip.five": "§7MineGate if the option is disabled,",
   "options.minegate.useMixins.tooltip.six": "§7it is recommended activate the option.",
-  "container.woodcutter": "Woodcutter",
+  "item.minegate.straw_hat": "Straw hat",
   "item.minegate.christmas_hat": "Christmas hat",
+  "container.woodcutter": "Woodcutter",
   "block.minegate.woodcutter": "Woodcutter",
   "block.minegate.tile_ore": "Tile Ore",
   "block.minegate.deepslate_tile_ore": "Deepslate Tile Ore",
