--- a/src/main/resources/assets/minegate/lang/fr_fr.json
+++ b/src/main/resources/assets/minegate/lang/fr_fr.json
@@ -20,8 +20,9 @@
     "options.minegate.useMixins.tooltip.five": "§7de MineGate si l'option est désactivée,",
     "options.minegate.useMixins.tooltip.six": "§7il est conseillé de la laisser activé.",
     "modmenu.descriptionTranslation.minegate-moreblocks": "Ajoute de nombreux blocs et de nouvelles variantes.",
-    "container.woodcutter": "Tailleur de bois",
+    "item.minegate.straw_hat": "Châpeau de paille",
     "item.minegate.christmas_hat": "Bonnet de Noël",
+    "container.woodcutter": "Tailleur de bois",
     "block.minegate.woodcutter": "Tailleur de bois",
     "block.minegate.tile_ore": "Minerai de tuile",
     "block.minegate.obsidian_ore": "Minerai d'obsidienne",
