--- a/src/main/resources/assets/minegate/lang/en_us.json
+++ b/src/main/resources/assets/minegate/lang/en_us.json
@@ -1384,6 +1384,7 @@
   "item.minegate.tomahawk": "Tomahawk",
   "item.minegate.straw_hat": "Straw Hat",
   "item.minegate.fishing_hat": "Fishing Hat",
+  "item.minegate.witch_hat": "Witch Hat",
   "item.minegate.classy_hat": "Classy Hat",
   "item.minegate.christmas_hat": "Christmas Hat",
 
