--- a/src/main/resources/assets/minegate/lang/fr_fr.json
+++ b/src/main/resources/assets/minegate/lang/fr_fr.json
@@ -1386,6 +1386,7 @@
     "item.minegate.tomahawk": "Tomahawk",
     "item.minegate.straw_hat": "Châpeau de paille",
     "item.minegate.fishing_hat": "Châpeau de pêcheur",
+    "item.minegate.witch_hat": "Châpeau de sorcière",
     "item.minegate.classy_hat": "Châpeau chic",
     "item.minegate.christmas_hat": "Bonnet de Noël",
 
